<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mode">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#373434"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mode"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/button13"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/square_button"
        android:onClick="showStandard"
        android:text="@string/standard"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/button17"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/square_button"
        android:onClick="showCrazyChess"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button18"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/square_button"
        android:onClick="showSwizz"
        android:text="@string/swizz"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <com.example.crazychessui.SmallBoard
        android:id="@+id/smallerChessboard"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.example.crazychessui.SmallBoard
        android:id="@+id/smallerChessboard2"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="381dp"
        android:layout_height="234dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/smallerChessboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />


</androidx.constraintlayout.widget.ConstraintLayout>