<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#373434"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <com.example.crazychessui.ChessboardView
        android:id="@+id/chessboard_view"
        android:layout_width="1080px"
        android:layout_height="1080px"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#373434"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#373434"
            android:text="@string/options_button"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#373434"
            android:text="@string/undo_button"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#373434"
            android:text="@string/redo_button"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chessboard_view"
        app:layout_constraintVertical_bias="0.717"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="Avatar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:text="Name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/chessboard_view"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="54dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:text="29:59"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chessboard_view"
        app:layout_constraintVertical_bias="0.269" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/chessboard_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.263"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="Avatar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="113dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:text="Name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/chessboard_view"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="54dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:text="30:00"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chessboard_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>